# Frost_Application

./: .cproject  .project  CMakeLists.txt  README.md  sdkconfig.old
app_modules/application/syssm/: CMakeLists.txt
app_modules/application/syssm/inc/: syssm.h
app_modules/application/syssm/src/: syssm.c
app_modules/device_drivers/audio/: CMakeLists.txt
app_modules/device_drivers/audio/inc/: audio.h
app_modules/device_drivers/audio/src/: audio.c
app_modules/device_drivers/ir_switch/: CMakeLists.txt
app_modules/device_drivers/ir_switch/inc/: ir_switch.h
app_modules/device_drivers/ir_switch/src/: ir_switch.c
app_modules/device_drivers/led_onboard/: CMakeLists.txt
app_modules/device_drivers/led_onboard/inc/: led.h
app_modules/device_drivers/led_onboard/src/: led.c
app_modules/infrastructure/config/inc/: pin_config.h
app_modules/infrastructure/lib/ring_buffer/: ring_buffer.c  ring_buffer.h
app_modules/infrastructure/lib/services/: CMakeLists.txt
app_modules/infrastructure/lib/services/inc/: division_library.h  extended_services.h  multiplication_library.h
app_modules/infrastructure/lib/services/src/: division_library.c  extended_services.c  multiplication_library.c
main/: CMakeLists.txt  main.c
